<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context="ToDoListFragment">

  <TextView
    android:id="@+id/textView_Tasks_Total_label"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/you_have_7_tasks"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="44dp"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />


  <Button
    android:id="@+id/button_view_all_tasks"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/view_tasks"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/cardView_important_task" />

  <Button
    android:id="@+id/button_add_task"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/create_a_task"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button_view_all_tasks" />


  <androidx.cardview.widget.CardView
    android:id="@+id/cardView_important_task"
    android:layout_width="match_parent"

    android:layout_height="100dp"
    app:cardUseCompatPadding="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView_Tasks_Total_label">

    <TextView
      android:id="@+id/textView_tasks_important_label"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="top|left"
      android:text="@string/upcoming_task"
      android:textStyle="bold" />

    <TextView
      android:id="@+id/textView_task_name_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center|left"
      android:text="@string/task_name_lebel" />

    <TextView
      android:id="@+id/textView_task_date_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|left"
      android:text="@string/date_task_card_date" />


    <TextView
      android:id="@+id/textView_task_priority_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="bottom|center"
      android:text="@string/priotiry" />
  </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
